--- a/client/src/login/Login.scss
+++ b/client/src/login/Login.scss
@@ -3,24 +3,18 @@
 
 }
 
-.LoginHeader{
-    width:100%;
-    height: 75px;
-    background-color: #A9A9A9;
-    margin-bottom: 5px;
-   
-   }
+
 .LoginFields{
     width: 30%;
-    height: 25px;
+    height: 1.5em;
     margin-top: 5%;
-    /* border: 1px solid black; */
+    border: 1px solid black; 
     font-size: 1em;
 }
 
 .LoginButton{
     margin-top: 5%;
-    height: 25px;
+    height: 3em;
     width: 5%;
     color: white;
     background-color: #808080;
