changed px to em

--- a/client/src/login/Login.scss
+++ b/client/src/login/Login.scss
@@ -8,7 +8,7 @@
     width: 30%;
     height: 1.5em;
     margin-top: 5%;
-    border: 1px solid black; 
+    border: .1em solid black; 
     font-size: 1em;
 }
 
@@ -18,5 +18,5 @@
     width: 5%;
     color: white;
     background-color: #808080;
-    border-radius: 50px;
+    border-radius: 2em;
 }
