--- a/client/src/register/Register.scss
+++ b/client/src/register/Register.scss
@@ -7,7 +7,7 @@
     width: 30%;
     height: 1.5em;
     margin-top: 5%;
-    /* border: 1px solid black; */
+    border: .1em solid black; 
     font-size: 1em;
 }
 
@@ -17,7 +17,7 @@
     width: 5%;
     color: white;
     background-color: #808080;
-    border-radius: 50px;
+    border-radius: 2em;
 }
 
 
