Handler events for text, submit, and options

--- a/client/src/register/Register.scss
+++ b/client/src/register/Register.scss
@@ -12,7 +12,8 @@
 }
 
 .RegisterButton{
-    margin-top: 5%;
+    margin-top: 2%;
+    margin-bottom: 2%;
     height: 3em;
     width: 5%;
     color: white;
@@ -46,7 +47,7 @@
     
 // }
 
-.RadioButtonCSS{
+.TypeofUser{
     margin: 3%;
     font-size: 1.1em;
 }
