Fixed td units to em

--- a/client/src/StudentHomePage/StudentHomePage.scss
+++ b/client/src/StudentHomePage/StudentHomePage.scss
@@ -10,7 +10,7 @@ th, td {
 }
 td{
     background-color:white;
-    border-top:solid 2px; border-bottom:solid 2px;
+    border-top:solid .1em; border-bottom:solid .1em;
 }
 th{
     font-size: x-large;
