--- a/client/src/ProfessorAssignmentView/PAssignmentView.scss
+++ b/client/src/ProfessorAssignmentView/PAssignmentView.scss
@@ -11,6 +11,7 @@ table {
   }
 
   .AssignmenViewTable{
-      margin-left: 10%;
+      margin-left: 5%;
       margin-top: 3%;
+      margin-bottom: 5%;
   } 
