--- a/client/src/register/Register.scss
+++ b/client/src/register/Register.scss
@@ -22,30 +22,9 @@
 }
 
 
-// Might implement later this is for the "fancy buttons" i made radio boxes since they'll be easier for testing/implementing backend
-
-// .RegisterAlternate{
-//     display: inline-block;
-//     height: 45px;
-//     width: 100px;
-//     border: none;
-//     color: white;
-//     background-color: #808080;
-//     margin-top: 5%;
-//     border-radius: 15px 0px 0px 15px;
-// }
-
-// .RegisterAlternate1{
-//     display: inline-block;
-//     height: 45px;
-//     width: 100px;
-//     border: none;
-//     color: black;
-//     background-color: white;
-//     margin-top: 5%;
-//     border-radius: 0px 15px 15px 0px;
-    
-// }
+#ErrorMessagesLogin {
+    color:red; 
+}
 
 .TypeofUser{
     margin: 3%;
