--- a/client/src/ProfessorAssignment/ProfessorAssignments.scss
+++ b/client/src/ProfessorAssignment/ProfessorAssignments.scss
@@ -15,6 +15,7 @@ input[type="button"]{
     color: white;
     border-radius: 2em;
 	margin: 1em;
+	text-decoration:none;
 }
 .questionDiv{
 	display: flex;
