committing all changed

--- a/client/src/ProfessorHomePage/PHomePage.scss
+++ b/client/src/ProfessorHomePage/PHomePage.scss
@@ -42,3 +42,9 @@ input[type="submit"]{
     margin-right: 0%;
     font-weight: lighter;
 }
+
+button{
+    background-color:#696969;
+    color: white;
+    border-radius: 2em;
+}
