--- a/client/src/StudentGradesPage/SGP.scss
+++ b/client/src/StudentGradesPage/SGP.scss
@@ -4,7 +4,10 @@
     margin-right: 5%;
     margin-top: 5%;
     margin-bottom: 5%;
-
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    
     th, td {
         padding: 2.5%;
     }
@@ -14,5 +17,10 @@
     }
     th{
         font-size: x-large;
+    }
+    table{
+        border-collapse: collapse;
+        width: 100%;
+        overflow-x:auto;
     }
 }
