--- a/client/src/StudentHomePage/StudentHomePage.scss
+++ b/client/src/StudentHomePage/StudentHomePage.scss
@@ -19,6 +19,7 @@
         border-collapse: collapse;
         width: 100%;
         overflow-x:auto;
+        table-layout: fixed;
     }
     #body tr:hover {
         background-color:white; 
