new student greeting

--- a/client/src/StudentHomePage/StudentHomePage.scss
+++ b/client/src/StudentHomePage/StudentHomePage.scss
@@ -1,5 +1,5 @@
-.Home{
-    text-align: left;
+.Home, .greeting{
+    text-align: center;
     margin-left: 5%;
     margin-right: 5%;
     margin-top: 5%;
