--- a/client/src/ProfessorAssignment/ProfessorAssignments.scss
+++ b/client/src/ProfessorAssignment/ProfessorAssignments.scss
@@ -46,3 +46,7 @@ input[type="button"]{
 .loadingContainer{
 	display: flex;
 }
+ #ErrorMessagesCreateAssignment{
+	 color: red; 
+	 margin-left: 35%;
+ }
