links added to assignment view

--- a/client/src/ProfessorAssignmentView/PAssignmentView.scss
+++ b/client/src/ProfessorAssignmentView/PAssignmentView.scss
@@ -31,5 +31,9 @@ table, th, td {
 }
 .assignmentLinks{
 	display: flex;
-	justify-content: flex-end;
+	flex-direction: column;
+}
+.assLinkCont{
+	display: flex;
+	flex-direction: row;
 }
