--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -4,6 +4,17 @@
 .material-icons {
 	font-size: 2.5em;
 }
+
+.clearButton{
+	background: none;
+	color: inherit;
+	border: none;
+	padding: 0;
+	font: inherit;
+	cursor: pointer;
+	outline: inherit;
+}
+
 .headerContent-hidden{
 	display: flex;
 	flex-direction: row;
@@ -57,6 +68,14 @@
 		height: 100%;
 		top: 0;
 		right: 0;
+
+		background: none;
+		color: inherit;
+		border: none;
+		padding: 0;
+		font: inherit;
+		cursor: pointer;
+		outline: inherit;
 	}
 }
 
